--- a/docker/production/nginx/nginx.conf
+++ b/docker/production/nginx/nginx.conf
@@ -1,11 +1,11 @@
-upstream src {
+upstream task {
     server web:8000;
 }
 
 server {
 
     listen 80;
-    server_name 3.16.54.221;
+    server_name 3.16.54.221 localhost;
     access_log  /var/log/nginx/example.log;
 
     location / {
@@ -28,7 +28,7 @@ server {
 
 
     location @proxy_to_app {
-        proxy_pass http://src;
+        proxy_pass http://task;
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
