--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
       dockerfile: ./docker/production/web/Dockerfile
     ports:
       - 8000:8000
-    #entrypoint: /entrypoint.sh
+    entrypoint: /entrypoint.sh
     #command: python manage.py runserver 0.0.0.0:8000
-    command: gunicorn task.wsgi:application --bind 0.0.0.0:8000
+    #command: gunicorn task.wsgi:application --bind 0.0.0.0:8000
     restart: always
   database:
     image: postgres:12.0-alpine
