--- a/docker/production/nginx/nginx.conf
+++ b/docker/production/nginx/nginx.conf
@@ -14,16 +14,16 @@ server {
 
     location /static/ {
         autoindex on;
-        alias /home/www/web/static/;
+        alias /home/src/web/static/;
     }
 
     location /media/ {
         autoindex on;
-        alias /home/www/web/media/;
+        alias /home/src/web/media/;
     }
 
     location = /favicon.png {
-        alias /home/www/web/static/app/favicon.png;
+        alias /home/src/web/static/app/favicon.png;
     }
 
 
