--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,10 @@ services:
     ports:
       - 8000:8000
     entrypoint: /entrypoint.sh
-    #command: python manage.py runserver 0.0.0.0:8000
-    #command: gunicorn task.wsgi:application --bind 0.0.0.0:8000
     restart: always
+    volumes:
+      - ./web/:/usr/src/web/
+      - static:/usr/src/web/static/
   database:
     image: postgres:12.0-alpine
     hostname: postgres
@@ -22,6 +23,8 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: example
   nginx:
+    volumes:
+      - static:/home/src/web/static/
     env_file:
       - ./docker/production/.env/.env
     ports:
@@ -31,3 +34,4 @@ services:
       dockerfile: ./docker/production/nginx/Dockerfile
 volumes:
   database:
+  static:
