--- a/docker/production/.env/.env
+++ b/docker/production/.env/.env
@@ -1,6 +1,6 @@
 SECRET_KEY=w^8j1@6glj-5ainlkgogmujf5m1a_knkq5q3a_&^8easp@b9+!
-ENGINE=django.db.backends.sqlite3
-NAME=BASE_DIR / db.sqlite3
+ENGINE=django.db.backends.postgresql
+NAME=postgres
 USER=postgres
 PASSWORD=example
 HOST=database
