--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,12 @@ services:
       dockerfile: ./docker/dev/web/Dockerfile
     ports:
       - 8001:8000
+    volumes:
+      - ./web/:/usr/src/web/
     entrypoint: /entrypoint.sh
     restart: always
+    depends_on:
+      - database
   database:
     image: postgres:12.0-alpine
     hostname: postgres
