--- a/docker/production/.env/.env
+++ b/docker/production/.env/.env
@@ -5,6 +5,6 @@ USER=postgres
 PASSWORD=example
 HOST=database
 PORT=5432
-VIRTUAL_HOST=
+VIRTUAL_HOST=dictionary.jollymanager.com
 VIRTUAL_PORT=8000
-LETSENCRYPT_HOST=
+LETSENCRYPT_HOST=dictionary.jollymanager.com
